applications/tenants/ferme-du-jointout/overlays/production/dolibarr/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dolibarr
  namespace: ${tenant}-dolibarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dolibarr.${domain}`)
      kind: Rule
      services:
        - name: dolibarr
          port: 80
    - match: Host(`compta.${domain}`)
      kind: Rule
      services:
        - name: dolibarr
          port: 80
  tls:
    secretName: wildcard.${domain}
